--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.spaceTop{
+  margin-top: 10px;
+}
+.clickable{
+  cursor: pointer;
+}
+.toright{
+  float: right;
+}
